# trainheroicMcp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  Procfile  README.md  pyproject.toml
docs/: trainheroic-mcp-spec.md
src/trainheroic_mcp/: client.py  server.py
tests/: conftest.py  helpers.py  test_client.py  test_tools.py
