[project]
name = "trainheroicmcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "hatchling>=1.29.0",
    "mcp[cli]>=1.27.2",
    "python-dotenv>=1.2.2",
]

[project.scripts]
trainheroic-mcp = "trainheroic_mcp.server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trainheroic_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-httpx>=0.36.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
